--- a/assets/stylesheet.scss
+++ b/assets/stylesheet.scss
@@ -13,6 +13,7 @@ nav {
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   position: fixed;
+
   top: 70px;
   width: 230px;
 
@@ -122,7 +123,7 @@ nav {
   min-height: calc(100% - 173px);
   min-height: -moz-calc(100% - 173px);
   min-height: -webkit-calc(100% - 173px);
-  min-height: -o-calc(100% - 173px);
+  //min-height: -o-calc(100% - 173px);
   position: absolute;
   overflow: auto;
   padding-bottom: 100px;
