--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: #f9f9f9;
+  background-color: rgba(249, 249, 249, 0);
   border-top: 1px solid #e9e9e9;
   border-left: 1px solid #e9e9e9;
   border-right: 1px solid #e9e9e9;
