--- a/assets/stylesheet.scss
+++ b/assets/stylesheet.scss
@@ -3,8 +3,14 @@ body {
   //background-color: rgb(240,240,240);
 }
 
+.quicknav {
+  position:fixed;
+  top: 30px;
+
+}
+
 nav {
-  background-color: rgba(249,249,249,1);
+  background-color: rgba(249,249,249,0);
   border-top: 1px solid rgba(233,233,233,1);
   border-left: 1px solid rgba(233,233,233,1);
   border-right: 1px solid rgba(233,233,233,1);
