--- a/assets/stylesheet.scss
+++ b/assets/stylesheet.scss
@@ -205,7 +205,9 @@ nav {
     //background-color:rgba(240,240,240,1);
     border-color:rgb(230,230,230);
 
-
+    .note {
+      color: red;
+    }
   }
   .type {
  //   display:initial;
@@ -217,14 +219,22 @@ nav {
 
 
 .methodDescription {
-  background-color:rgb(246,246,246);
+  background-color:rgb(248,248,248);
 
   border: 1px solid rgb(230,230,230);
   margin-bottom:15px;
 
   padding:10px 10px 5px 15px;
+  hr {
+    border-top:1px solid #e2e2e2;
+  }
+  img {
+    max-width:640px;
+    margin-bottom:8px;
+  }
 
   .memberVariant {
+    margin-left:10px;
     margin-bottom:8px;
     font-family: 'Inconsolata', monospace;
     font-size:14px;
@@ -241,7 +251,7 @@ nav {
     }
   }
   .memberDocumentation {
-    padding-left: 15px;
+    padding-left: 45px;
     margin-bottom:8px;
   }
 
