--- a/assets/stylesheet.scss
+++ b/assets/stylesheet.scss
@@ -103,20 +103,14 @@ nav {
 
         }
       }
-
-
-
-
-
-
-
-
-
     }
   }
 }
 
 
+.content {
+  padding-left:20px;
+}
 
 .main {
   //background-color: rgba(255,255,255,1);
@@ -147,10 +141,31 @@ nav {
   display: none;
 }
 
+p {
+  margin-bottom: 20px;
+}
 
-.sectionHeader {
+h1 {
+  font-weight: 200;
+  font-size:40px;
+  margin-bottom:30px;
+}
+
+.sectionHeader, h3 {
+  font-weight: 200;
+  font-size:25px;
+
+  margin-top:50px;
+  margin-bottom:20px;
+}
+
+h4 {
   font-weight: 200;
   font-size:20px;
+
+  margin-top:30px;
+  margin-bottom:10px;
+
 }
 
 .methodHeader {
