--- a/assets/stylesheet.scss
+++ b/assets/stylesheet.scss
@@ -1,27 +1,101 @@
+$menuBackground: rgba(249,249,249,1.0);
+
+
 body {
   //font-size: 13px;
   //background-color: rgb(240,240,240);
 }
 
-.quicknav {
-  position:fixed;
-  top: 30px;
+.toc {
+  margin-top:100px;
+  .form-control {
+    height: 45px;
+    font-size: 16px;
+  }
+
+  .searchResult {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  }
+
+  .section {
+    float:left;
+    width:228px;
+    margin-bottom:20px;
+  }
+}
+
+.header {
+  border-bottom:  1px solid rgba(233,233,233,1);
+  background-color: $menuBackground;
 
 }
 
-nav {
-  background-color: rgba(249,249,249,0);
-  border-top: 1px solid rgba(233,233,233,1);
-  border-left: 1px solid rgba(233,233,233,1);
-  border-right: 1px solid rgba(233,233,233,1);
+ul.searchResult {
+  padding: 0;
+
+  li {
+    list-style: none;
+    position: relative;
+    cursor: pointer;
+
+    a {
+      padding: 10px 10px 10px 10px;
+      display:block;
+    }
+
+    //&:hover {
+    &.selected {
+      background-color: #F0F0F0;
+    }
+
+    .searchName {
+      font-size: 20px;
+      margin:0;
+    }
+
+    .searchType {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      color: #888;
+    }
+  }
+}
+
+.quicknav {
+  position:fixed;
+  top: 60px;
+
+}
+
+nav.navigator {
+  //background-color: $menuBackground;
+  //border: 1px solid rgba(233,233,233,1);
+  border-bottom: 0;
   bottom: 0;
-  box-shadow: 0 0 1px rgba(0,0,0,.07);
+  //box-shadow: 0 0 1px rgba(0,0,0,.07);
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   position: fixed;
 
-  top: 70px;
+  top: 90px;
+  //padding-top:70px;
   width: 230px;
+
+  .title {
+    font-size:30px;
+    font-weight: 200;
+  //  padding-left:20px;
+    padding-top:10px;
+    padding-bottom:10px;
+
+  }
 
   ul#nav-parts {
     color: rgba(128,128,128,1);
@@ -32,14 +106,16 @@ nav {
     -webkit-padding-start: 0;
     padding-left:0px;
 
+
+
     li.group {
-      border-bottom: 1px solid rgba(233,233,233,1);
+      //border-bottom: 1px solid rgba(233,233,233,1);
       font-family: Helvetica;
-      font-size: 1.2em;
+      font-size: 1.5em;
       line-height: 150%;
       list-style-type: none;
       margin: 0;
-      padding: 10px 30px 10px 20px;
+      padding: 10px 30px 10px 0px;
       cursor: pointer;
       color: #333;
 
@@ -59,14 +135,24 @@ nav {
       ul {
         padding: 0px;
 
+        span {
+          line-height: 40px;
+          font-size:17px;
+        }
+
+
         li.chapter {
           display:block;
           line-height:13px;
           margin: 9px 0px;
+          padding-left:10px;
+
 
           a {
             font-size:12px;
             color: rgba(128,128,128,1);
+            transition: color 0.2s ease, padding 0.2s ease;
+            padding-left:0px;
           }
 
           li.section {
@@ -91,7 +177,11 @@ nav {
           }
 
           &.selected {
-            font-weight: bold;
+            //font-weight: bold;
+            a {
+              color:#ee3987;
+              padding-left:5px;
+            }
 
             li.section {
               display:block;
@@ -109,7 +199,7 @@ nav {
 
 
 .content {
-  padding-left:20px;
+  //padding-left:20px;
 }
 
 .main {
@@ -155,8 +245,10 @@ h1 {
   font-weight: 200;
   font-size:25px;
 
-  margin-top:50px;
   margin-bottom:20px;
+
+  padding-top: 70px;
+  margin-top: -20px; //Offset 70px for anchors because of fixed header
 }
 
 h4 {
@@ -171,16 +263,23 @@ h4 {
 .methodHeader {
   font-family: 'Inconsolata', monospace;
   font-size:14px;
-  padding-bottom:5px;
-  padding-top:5px;
-  padding-left: 23px;
   cursor: pointer;
-  //background-color:rgba(255,255,255,0);
-  border: 1px solid white;
-  border-bottom: 0px;
-  transition: border-color 0.5s ease;
+
+  margin-top:-80px;
+  padding-top:80px;
+
+  .methodHeaderBox {
+    padding-top:5px;
+    padding-bottom:5px;
+    padding-left: 23px;
+
+    border: 1px solid white;
+    border-bottom: 0px;
+    transition: border-color 0.5s ease;
+  }
 
   a {
+
     &:hover{
       text-decoration: none;
     }
@@ -197,7 +296,7 @@ h4 {
     display: none;
   }
 
-  &.deprecatedMethod {
+  .deprecatedMethod {
     span {
       text-decoration: line-through;
     }
@@ -216,19 +315,13 @@ h4 {
 
 .open {
   .methodHeader {
-   // font-weight: bold;
-    //background-color:rgba(240,240,240,1);
-    border-color:rgb(230,230,230);
+    .methodHeaderBox {
+      border-color: rgb(230, 230, 230);
+    }
 
     .note {
       color: red;
     }
-  }
-  .type {
- //   display:initial;
-  }
-  .args {
-  //  display: initial;
   }
 }
 
@@ -240,9 +333,35 @@ h4 {
   margin-bottom:15px;
 
   padding:10px 10px 5px 15px;
+  display: block;
+
+  &.hidden {
+    /*visibility: visible!important;
+    //overflow: hidden;
+    display:block!important;
+    padding:0;
+    margin:0;
+    height: 0px;*/
+  }
+
+
+
+  .memberDocumentation {
+    padding-left: 25px;
+    margin-bottom:8px;
+  }
+
+}
+
+//
+// Description text
+//
+.methodDescription, .classDescription {
+
   hr {
     border-top:1px solid #e2e2e2;
   }
+
   img {
     max-width:640px;
     margin-bottom:8px;
@@ -254,38 +373,26 @@ h4 {
     font-family: 'Inconsolata', monospace;
     font-size:14px;
 
-    .type {
-
-    }
     .name {
       font-weight: bold;
-
-    }
-    .args{
-
     }
   }
-  .memberDocumentation {
-    padding-left: 45px;
-    margin-bottom:8px;
-  }
-
-
 
   table {
     border-collapse: collapse;
+
+    td, th {
+      padding: 6px;
+    }
+
+    td.paramname {
+      font-style: italic;
+    }
+
   }
 
   table, th, td {
     border: 1px solid rgb(215,215,215);
-  }
-
-  td {
-    padding: 6px;
-  }
-
-  td.paramname {
-    font-style: italic;
   }
 
   dt {
@@ -294,22 +401,26 @@ h4 {
   dd {
     // padding-left: 20px;
   }
-
-
-
-
+  .author {
+    display:none;
+  }
 }
 
+//
+// Code styling
+//
 .fragment, pre {
-  margin-left:15px;
-  border: 0px;
-  border-radius: 0px;
-  border-left:5px solid #c2c2c2;
+
+  //margin-left:15px;
+  //border: 0px;
+  //border-radius: 0px;
+  //border-left:0px solid #c2c2c2;
+
   padding: 5px;
-  padding-left:7px;
-  margin-bottom: 8px;
+  padding-left:25px;
 
-
+  margin-top: 15px;
+  margin-bottom: 15px;
 
   a {
     //color:black;
