--- a/assets/stylesheet.scss
+++ b/assets/stylesheet.scss
@@ -34,6 +34,28 @@ body {
   border-bottom:  1px solid rgba(233,233,233,1);
   background-color: $menuBackground;
 
+  .navbar-form {
+    position:relative;
+  }
+
+  .searchResult {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+
+    position:absolute;
+    right:15px;
+    margin-top:-3px;
+
+    background-color:white;
+
+    width:500px;
+
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  }
+
 }
 
 ul.searchResult {
