--- a/assets/stylesheet.scss
+++ b/assets/stylesheet.scss
@@ -261,32 +261,29 @@ nav.navigator {
   display: none;
 }
 
-p {
-  margin-bottom: 20px;
-}
-
-h1 {
-  font-weight: 200;
-  font-size:40px;
-  margin-bottom:30px;
-}
-
 .sectionHeader, h3 {
   font-weight: 200;
   font-size:25px;
 
   margin-bottom:20px;
 
-  padding-top: 70px;
+  padding-top: 20px;
   margin-top: -20px; //Offset 70px for anchors because of fixed header
+}
+
+
+h1 {
+  font-weight: 200;
+  font-size:40px;
+  margin-bottom:20px;
 }
 
 h4 {
   font-weight: 200;
   font-size:20px;
 
-  margin-top:30px;
-  margin-bottom:10px;
+  //margin-top:30px;
+  //margin-bottom:10px;
 
 }
 
@@ -362,6 +359,10 @@ h4 {
 }
 
 
+.sectionContent {
+  margin-bottom:30px;
+}
+
 .methodDescription {
   background-color:rgb(248,248,248);
 
@@ -389,6 +390,10 @@ h4 {
 
 }
 
+.classDescription{
+  margin-bottom: 40px;
+}
+
 //
 // Description text
 //
@@ -402,6 +407,15 @@ h4 {
     max-width:640px;
     margin-bottom:8px;
   }
+
+
+  p {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+
+
 
   .memberVariant {
     margin-left:10px;
