--- a/assets/stylesheet.scss
+++ b/assets/stylesheet.scss
@@ -12,7 +12,7 @@ small {
 }
 
 .toc {
-  margin-top:100px;
+  margin-top:60px;
   .form-control {
     height: 45px;
     font-size: 16px;
@@ -20,6 +20,10 @@ small {
   .labelToggle {
     top: 50px;
     position:relative;
+  }
+
+  .lastModified {
+
   }
 
   .searchResult {
